--- a/client/src/css/App.less
+++ b/client/src/css/App.less
@@ -24,22 +24,33 @@
   font-style: italic;
 }
 
-*, h1, h2, h3, a, body, .ant-input {
+*,
+h1,
+h2,
+h3,
+a,
+body,
+.ant-input {
   font-family: IBMPlexSansLight, Helvetica, Verdana, sans-serif;
 
   &::placeholder {
-    font-family: IBMPlexSansLight, Helvetica, Verdana, sans-serif;;
+    font-family: IBMPlexSansLight, Helvetica, Verdana, sans-serif;
   }
 }
 
-a, a:hover, .link {
+a,
+a:hover,
+.link {
   color: @link;
   font-weight: bold;
   text-decoration: underline;
   cursor: pointer;
 }
 
-body, html, #root, #whole {
+body,
+html,
+#root,
+#whole {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -139,13 +150,20 @@ body, html, #root, #whole {
   cursor: default;
 }
 
-.ant-menu-item, .ant-menu-submenu-title, .ant-tabs-tab, .ant-card-head-title {
-  .fa, .svg-inline--fa {
+.ant-menu-item,
+.ant-menu-submenu-title,
+.ant-tabs-tab,
+.ant-card-head-title {
+  .fa,
+  .svg-inline--fa {
     min-width: 14px;
     margin-right: 10px;
-    -webkit-transition: font-size 0.15s cubic-bezier(0.215, 0.61, 0.355, 1), margin 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-    -o-transition: font-size 0.15s cubic-bezier(0.215, 0.61, 0.355, 1), margin 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-    transition: font-size 0.15s cubic-bezier(0.215, 0.61, 0.355, 1), margin 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    -webkit-transition: font-size 0.15s cubic-bezier(0.215, 0.61, 0.355, 1),
+      margin 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    -o-transition: font-size 0.15s cubic-bezier(0.215, 0.61, 0.355, 1),
+      margin 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    transition: font-size 0.15s cubic-bezier(0.215, 0.61, 0.355, 1),
+      margin 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
   }
 }
 
