--- a/client/src/css/ChatBalloon.less
+++ b/client/src/css/ChatBalloon.less
@@ -55,7 +55,8 @@
     padding: 10px;
     border-radius: 10px;
 
-    .ant-list-item-meta-title, .ant-list-item-meta-description {
+    .ant-list-item-meta-title,
+    .ant-list-item-meta-description {
       color: @black;
       font-size: @textSize;
     }
@@ -81,7 +82,8 @@
           }
         }
 
-        .ant-list-item-meta-title, .ant-list-item-meta-description {
+        .ant-list-item-meta-title,
+        .ant-list-item-meta-description {
           color: @black;
           text-align: right;
         }
@@ -141,7 +143,6 @@
 }
 
 .feedbackBox {
-
   .ant-divider {
     margin: 5px 0;
   }
