--- a/client/src/css/ChatBalloonTicket.less
+++ b/client/src/css/ChatBalloonTicket.less
@@ -18,7 +18,8 @@
   color: @dark;
 }
 
-.ant-confirm-warning .ant-confirm-body > .anticon, .ant-confirm-confirm .ant-confirm-body > .anticon {
+.ant-confirm-warning .ant-confirm-body > .anticon,
+.ant-confirm-confirm .ant-confirm-body > .anticon {
   color: @dark;
   margin-right: 5px;
 }
