--- a/client/src/css/Palette.less
+++ b/client/src/css/Palette.less
@@ -1,29 +1,28 @@
 @darkest: #004280;
 @darker: #004e94;
-@dark: #0C43E8;
-@first: #0084FF;
-@second: #0CB8E8;
-@third: #0DFFF4;
+@dark: #0c43e8;
+@first: #0084ff;
+@second: #0cb8e8;
+@third: #0dfff4;
 @grey: #666363;
-@light-grey: #F5F7FA;
+@light-grey: #f5f7fa;
 @light-grey-alpha: fade(@light-grey, 50%);
 @white: #ffffff;
 @white-alpha: fade(@white, 85%);
-@magenta: #FF00FF;
+@magenta: #ff00ff;
 @red: #ff4914;
-@border-grey: #E8E8E8;
+@border-grey: #e8e8e8;
 @black: #000000;
 @bordeaux-border: #ffffff;
 
-@link: #FF9E40;
+@link: #ff9e40;
 
-@positive: #00A649;
-@negative: #A60100;
+@positive: #00a649;
+@negative: #a60100;
 @positive-alpha: fade(@positive, 35%);
 @negative-alpha: fade(@negative, 35%);
 
 @red-darkest-alpha: fade(@darkest, 12%);
-
 
 @textSize: 16px;
 @feedbackTextSize: 14px;
